# demo_zksnarks

./: .gitignore  Cargo.toml  README.md
src/: creation.rs  crs_player.rs  cryptography.rs  how_to_use_zksnark_crate.rs  main.rs  polynomial_utils.rs  print_utils.rs  prover.rs  verificiation.rs
