[package]
name = "learning-zksnarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = "0.4.1"
# num-bigint = "0.4.4"
# num-modular = "0.6.1"
polynomen = "1.1.0"
zksnark = "0.0.2"
bn = "0.4.3"
rand = "0.3.14"
